# arachnid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.contexts/: arachnid-prd.md
.github/workflows/: ci.yml  release.yml
migrations/: V001__initial_schema.sql  V002__add_validations.sql  V010__agent_definitions.sql
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  handlers.rs  mod.rs  server.rs
src/capabilities/: analyst.rs  code_reviewer.rs  code_writer.rs  mod.rs  search.rs  synthesizer.rs
src/definitions/: builtin.rs  generator.rs  mod.rs  schema.rs
src/engine/: coordination.rs  executor.rs  lifecycle_management.rs  mod.rs  propagation.rs  resonance.rs  spawning.rs
src/factory/: mod.rs
src/lifecycle/: health.rs  mod.rs  state_machine.rs  tuning_drift.rs  wind_down.rs
src/providers/: embedding.rs  llm.rs  mod.rs  ollama.rs  search.rs
src/storage/: memory.rs  mod.rs  postgres.rs  traits.rs
src/tools/: emit_signal.rs  execute_code.rs  fetch_url.rs  impresario_client.rs  mod.rs  read_file.rs  runtime.rs  search_codebase.rs  spawn_agent.rs  web_search.rs  write_file.rs
src/types/: agent.rs  mod.rs  signal.rs  web.rs
src/validation/: mod.rs  service.rs
tests/: phase9_integration.rs
tests/tools/: coordination_tests.rs  execute_code_tests.rs  fetch_url_tests.rs  file_operations_tests.rs  mod.rs  tool_runtime_tests.rs
