[package]
name = "arachnid"
version = "1.0.0"
edition = "2021"
authors = ["Kwesi Yankson"]
description = "Autonomous agent coordination through semantic resonance"
license = "Apache-2.0"
repository = "https://github.com/Pharbi/arachnid"
homepage = "https://github.com/Pharbi/arachnid"
documentation = "https://github.com/Pharbi/arachnid"
readme = "README.md"
keywords = ["ai", "agents", "llm", "coordination", "autonomous"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
